--- a/TRAB_FINAL_INF1608/src/makefile
+++ b/TRAB_FINAL_INF1608/src/makefile
@@ -1,2 +1,2 @@
 volumeVisualization : main.cpp
-	g++ -o volumeVisualization main.cpp CT.cpp PGM.cpp VolumeVisualizationScene.cpp  Integral.cpp -I .
+	g++ -std=c++0x -o volumeVisualization main.cpp CT.cpp PGM.cpp VolumeVisualizationScene.cpp Integral.cpp Ray.cpp -lm -I .
